fix: connectors' icons disappearing on mobile devices

--- a/src/style.less
+++ b/src/style.less
@@ -3176,7 +3176,6 @@ table th {
 .connector-source-dest-title {
     margin: 15px 0 15px 0;
     font-size: 4rem;
-    white-space: nowrap;
 
     @media (max-width: 810px) {
         font-size: 3rem;
@@ -3269,7 +3268,6 @@ table th {
 
     .connector-source-dest-image-wrapper {
         margin-top: 10%;
-        margin-right: -5rem;
     }
 }
 
